--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,8 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "get_next_line.h": "c"
+    "get_next_line.h": "c",
+    "stdio.h": "c",
+    "fcntl.h": "c"
   }
 }
